--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,11 @@
 $purple : #2b0c59;
 
 .app{
+    display: flex;
+    justify-content: center;
 
     .container{
-
+        width: 1024px;
         // Login and Register
 
         .auth{
@@ -45,8 +47,277 @@ $purple : #2b0c59;
                 color: white;
                 cursor: pointer;
             }
+
+            span{
+                font-size: 14px;
+                text-align: center;
+                cursor: pointer;
+            }
+
+            p{
+                text-align: center;
+            }
         }
 
 
+    
+
+    //NAVBAR
+
+    .navbar{
+        .container{
+
+            padding: 10px 0px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+
+
+            .logo{
+                height: 100px;
+                width: 100px;
+                align-items: center;
+
+                
+            }
+
+            .links{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            
+
+            h6{
+                font-Size: 16px;
+                font-weight: 300;
+            }
+
+            span{
+                cursor: pointer;
+
+              
+                }
+
+                .write{
+                    background-color: $purple;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: 300;
+                    border: 1px solid white;
+    
+                    &:hover{
+                        color: $purple;
+                        background-color:white;
+                        border: 1px solid $purple;
+                    }
+            }
+
+        }
+        }
+    }
+
+
+    //FOOTER
+
+
+    footer{
+        // .container{
+
+            padding: 10px 0px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            img{
+                height: 100px;
+                width: 100px;
+                align-items: center;
+            }
+        
+    }
+
+    //HOME
+
+        .home{
+
+            .posts{
+                margin-top: 50px;
+                display: flex;
+                flex-direction: column;
+                gap: 150px;
+
+                .post{
+                    display: flex;
+                    gap: 100px;
+
+                    &:nth-child(2n+1){
+                        flex-direction: row-reverse;
+                    }
+
+                    .img{
+                        flex: 2;
+                        position: relative;
+
+                        &::after{
+                            content: "";
+                            width: 100%;
+                            height: 100%;
+                            background-color: $purple;
+                            position: absolute;
+                            top: 20px;
+                            left: 20px;
+                            z-index: -1;
+                        }
+
+                        img{
+                            width: 100%;
+                            max-height: 400px;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .content{
+                        flex: 3;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                        h1{
+                            font-size: 48px;
+                        }
+
+                        p{
+                            font-size: 18px;
+                        }
+
+                        button{
+                            width: max-content;
+                            padding: 10px 20px;
+                            border: none;
+                            cursor: pointer;
+                            background-color: white;
+                            border: 1px solid $purple;
+                            color: $purple;
+
+                            &:hover{
+                                border: 1px solid white;
+                                background-color: $purple;
+                                color: white;
+                            }
+
+                    }
+                }
+            }
+
+        }
+        }
+
+        //SINGLE
+
+        .single{
+            display: flex;
+            gap: 50px;
+
+            .content{
+                flex: 5;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                img{
+                    width: 100%;
+                    height: 300px;
+                    object-fit: cover;
+                }
+
+                .user{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    font-size: 14px;
+
+                    img{
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+
+                    span{
+                        font-weight: bold;
+                    }
+                }
+
+                .edit{
+                    display: flex;
+                    gap: 5px;
+
+                    img{
+                        width: 40px;
+                        height: 40px;
+                        cursor: pointer;
+                    }
+                }
+
+                h1{
+                    font-size: 42px;
+                    color: #333;
+                }
+
+                p{
+                    text-align: justify;
+                    line-height: 30px;
+                }
+            }
+                .menu{
+                    flex: 2;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 25px;
+
+                    h1{
+                        font-size: 20px;
+                        color: #555;
+                    }
+
+                    .post{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+
+                        img{
+                            width: 100%;
+                            height: 200px;
+                            object-fit: cover;
+                        }
+
+                        h2{
+                            color: #555;
+                        }
+
+                        button{
+                            width: max-content;
+                            padding: 10px 20px;
+                            border: none;
+                            cursor: pointer;
+                            background-color: white;
+                            border: 1px solid $purple;
+                            color: $purple;
+
+                            &:hover{
+                                border: 1px solid white;
+                                background-color: $purple;
+                                color: white;
+                            }
+                        }
+                    }
+                }
+            
+        }
     }
 }
